# context-mixer

./: .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CONFLICT_DETECTION.md  HDBSCAN_IMPLEMENTATION_SUMMARY.md  PLAN.md  README.md  SPEC.md  THEORY.md  TODO.md  benchmark_clustering.py  commit-hook.sh  debug_conflict_detection.py  debug_conflict_detection_simple.py  example_clustering.py  example_clustering_strategy.py  guidance.md  mkdocs.yml  precommit-hook.sh  pyproject.toml  pytest.ini  test_clustering_integration.py
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: build.yml
.junie/: guidelines.md
benchmarks/: run_benchmarks.py
docs/: assembling-copilot-instructions.md  craft-overview.md  exploring-library.md  index.md  ingesting-prompts.md  installation.md  llm-gateway-configuration.md  managing-quarantine.md  performance-optimization.md  slicing-context.md
prompt_mixer/: cli.py
prompt_mixer/commands/: init.py
refs/: hdbscan.md
scenarios/: 0002_ingest_monolithic_to_empty_library.md  0003_ingest_monolithic_to_existing_library.md  0004_ingest_with_conflict_resolution.md
scenarios/examples/: code1.md  code2.md  code_internal_conflict.md  dont_run_with_scissors.md  run_with_scissors.md
src/_examples/: batch_conflict_detection_demo.py  check_improved_prompt.py  check_refined_prompt.py  chunking_demo.py  chunking_feedback_system.py  clustering_performance_demo.py  conflict_resolution_demo.py  connection_pool_demo.py  debug_chunks.py  dspy_playground.ipynb  event_driven_demo.py  event_driven_progress_demo.py  hdbscan_clustering_demo.py  knowledge_store_example.py  parallel_validation_demo.py  progress_tracking.py  simple_chunking_test.py  strategy_pattern_demo.py  structured_chunking_experiment.py  test_ingest_report.py
src/context_mixer/: __init__.py  cli.py  cli_clustering_spec.py  cli_params.py  cli_params_spec.py  config.py  spec_helpers.py
src/context_mixer/commands/: assemble.py  assemble_command_spec.py  assemble_spec.py  assembly_strategies.py  assembly_strategies_spec.py  base.py  base_spec.py  ingest.py  ingest_spec.py  init.py  init_spec.py  open.py  open_spec.py  quarantine.py  quarantine_spec.py  slice.py  slice_spec.py
src/context_mixer/commands/interactions/: conflict_resolution_strategies.py  conflict_resolution_strategies_spec.py  context_aware_resolution_strategy.py  resolve_conflicts.py
src/context_mixer/commands/operations/: commit.py  commit_message.py  commit_message_spec.py  commit_spec.py  merge.py  merge_pure_functions_spec.py  merge_spec.py
src/context_mixer/domain/: chunking_engine.py  chunking_engine_pure_functions_spec.py  chunking_engine_spec.py  cluster_aware_conflict_detection.py  clustering.py  clustering_integration.py  clustering_integration_spec.py  clustering_service.py  clustering_spec.py  conflict.py  context.py  context_aware_prompts.py  context_detection.py  context_detection_spec.py  events.py  events_spec.py  knowledge.py  knowledge_quarantine.py  knowledge_quarantine_spec.py  knowledge_store.py  knowledge_store_spec.py  progress_events.py  progress_events_spec.py  prompt_archive.py  vector_knowledge_store.py  vector_knowledge_store_clustering_spec.py
src/context_mixer/examples/: knowledge_store_example.py
src/context_mixer/gateways/: chroma.py  chroma_connection_pool.py  chroma_spec.py  git.py  git_spec.py  hdbscan_gateway.py  llm.py  llm_factory.py  llm_factory_spec.py  llm_spec.py
src/context_mixer/gateways/adapters/: chroma_adapter.py  chroma_adapter_spec.py
src/context_mixer/utils/: cli_progress.py  event_driven_progress.py  event_driven_progress_spec.py  progress.py  timing.py  timing_spec.py
src/prompt_mixer/: __init__.py  cli.py  config.py  spec_helpers.py
src/prompt_mixer/commands/: ingest.py  ingest_spec.py  init.py  init_spec.py  open.py  slice.py
src/prompt_mixer/commands/interactions/: resolve_conflicts.py
src/prompt_mixer/commands/operations/: commit.py  commit_message.py  commit_message_spec.py  commit_spec.py  merge.py
src/prompt_mixer/domain/: commit_message.py  conflict.py  llm_instructions.py  prompt_archive.py
src/prompt_mixer/gateways/: git.py  git_spec.py  llm.py
use-cases/: 0001_init_from_git.md  0002_ingest_monolithic_to_empty_library.md  assembling_prompts.md  deriving_rules_from_code.md  fresh_install.md  ingesting_prompts.md  init_from_git.md  managing_fragments.md  merging_repositories.md  reorganizing_fragments.md  slicing_fragments.md  syncing_repositories.md  token_counting.md
workbench/: README.md  __init__.py  automated_resolver.py  debug_false_positive.py  run_workbench.py  workbench_cli.py
workbench/scenarios/: __init__.py  architectural_scope_false_positive.py  common.py  false_positive_naming.py  indentation_conflict.py  internal_conflict.py
