[project]
name = "prompt-mixer"
version = "0.1.0"
description = "A tool to create, organize, merge and deploy reusable prompt instructions across multiple GenAI coding assistants"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Stacey Vetzal", email = "stacey@vetzal.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mojentic",
    "typer",
    "rich",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "flake8",
]

[project.scripts]
pmx = "prompt_mixer.cli:app"

[project.urls]
"Homepage" = "https://github.com/svetzal/prompt-mixer"
"Bug Tracker" = "https://github.com/svetzal/prompt-mixer/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["prompt_mixer*"]
