[project]
name = "context-mixer"
version = "0.4.1"
description = "A tool to create, organize, merge and deploy reusable context instructions across multiple GenAI coding assistants"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Stacey Vetzal", email = "stacey@vetzal.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mojentic",
    "typer",
    "rich",
    "pyyaml",
    "fastmcp",
    "chromadb",
    "chroma-hnswlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-asyncio",
    "flake8",
    "mkdocs",
    "mkdocs-material",
    "mkdocs-llmstxt",
    "mkdocstrings[python]",
    "griffe-fieldz",
    "pymdown-extensions",
]

[project.scripts]
cmx = "context_mixer.cli:app"

[project.urls]
"Homepage" = "https://github.com/svetzal/context-mixer"
"Bug Tracker" = "https://github.com/svetzal/context-mixer/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["context_mixer*"]

[tool.pytest.ini_options]
# File patterns for test discovery
python_files = ["*_spec.py"]

# Display settings for better specification-style output
addopts = "--tb=short --showlocals --color=yes --cov=src"

# Custom test summary
testpaths = ["src"]

# Improve readability of test names
python_functions = ["should_*"]
python_classes = ["Describe*"]

# Enable async support
asyncio_mode = "auto"

# Configure test collection
norecursedirs = [".* build dist venv site"]
